# bennett-studio

./: .gitignore  CLOUDSERVER.md  Cargo.toml  DBaaS.md  DBaaSPbP.md  PROJECT_TREE.txt  PaaS.md  README.md  RESEARCH.md  STATUS.md  SaaS.md  TODO.md  ci.yml  create-structure.sh  nightly.yml  package-lock.json  package.json  release.yml  setup-desktop.sh
README/: CONTRIBUTING.md
README/docs/Issue Templates/: bug_report.md  feature_request.md  performance_issue.md  sharing_issue.md
README/docs/RFC Template/: template.md
README/docs/adr/: adr-001-headless-engine.md  adr-002-rust-control-plane.md  adr-003-docker-runtime.md  adr-004-tauri-desktop.md  adr-005-reverse-tunnel.md  adr-006-schema-policy.md  template.md
cli/: .gitignore  Cargo.toml
cli/src/: main.rs
cli/src/commands/: keys.rs
desktop/: .gitignore  index.html  package.json  tailwind.config.js  vite.config.ts
desktop/src/: App.tsx  NotesPage.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src/commands/: database.rs  mod.rs  query.rs  sharing.rs  system.rs  vault.rs
desktop/src-tauri/src/engine/: launcher.rs  mod.rs  process.rs
desktop/src/components/: Layout.tsx  Sidebar.tsx  TitleBar.tsx
desktop/src/hooks/: index.ts  useDebounce.ts  useDeepLink.ts  useSharing.ts  useTheme.ts  useWebSocket.ts
desktop/src/pages/: DataPage.tsx  DatabasePage.tsx  HomePage.tsx  JoinSharePage.tsx  NotesPage.tsx  QueryPage.tsx  RemoteQueryPage.tsx  SchemaPage.tsx  SettingsPage.tsx  ShareLandingPage.tsx  SharePage.tsx
desktop/src/services/: api.ts  apiKeysApi.ts  dataService.ts  remoteApi.ts  settingsApi.ts  shareApi.ts  vaultService.ts
desktop/src/stores/: apiKeysStore.ts  databaseStore.ts  notesStore.ts  notificationPreferencesStore.ts  remoteConnectionStore.ts  shareStore.ts  themeStore.ts
desktop/src/theme/: index.ts
desktop/src/utils/: consoleBranding.ts
e2e/: .gitignore  package.json
engine/: .env.example  .gitignore  Cargo.toml  build.rs
engine/migrations/: 001_share_tables.sql
engine/src/: lib.rs  main.rs
engine/src/api/: activity.rs  api_keys.rs  engine_info.rs  guests.rs  health.rs  http.rs  middleware.rs  mod.rs  sharing.rs  websocket.rs  websocket_buffer.rs
engine/src/audit/: mod.rs
engine/src/auth/: api_keys.rs  jwt.rs  mod.rs  oauth.rs  rbac.rs  share_token.rs
engine/src/config/: env.rs  settings.rs
engine/src/connect_rpc/: export_service.rs  health.rs  interceptor.rs  mod.rs  query_service.rs  router.rs  schema_service.rs
engine/src/control_plane/: mod.rs  notes_store.rs
engine/src/control_plane/connection/: manager.rs
engine/src/control_plane/export/: csv_export.rs  json_export.rs  mod.rs  orchestrator.rs  parquet_export.rs  sql_dump.rs
engine/src/control_plane/migration/: migra.rs  mod.rs  runner.rs  skeema.rs  version.rs
engine/src/control_plane/query/: cache.rs  engine.rs  executor.rs  mod.rs  parser.rs  plan.rs
engine/src/control_plane/vault/: encryption.rs  mod.rs  rotation.rs  store.rs
engine/src/errors/: mod.rs  runtime.rs  sharing.rs
engine/src/grpc/: export.rs  mod.rs  query.rs  schema.rs  share.rs  web_proxy.rs
engine/src/models/: api_key.rs  connection.rs  database.rs  mod.rs  note.rs  query.rs  share.rs  user.rs
engine/src/plugins/: loader.rs  manifest.rs  mod.rs  registry.rs
engine/src/rate_limit/: mod.rs
engine/src/runtime/: mod.rs
engine/src/runtime/container/: docker.rs
engine/src/runtime/discovery/: scanner.rs
engine/src/runtime/network/: isolation.rs  mod.rs
engine/src/runtime/port/: allocator.rs
engine/src/runtime/process/: supervisor.rs
engine/src/runtime/volume/: manager.rs
engine/src/sharing/: manager.rs  mod.rs  p2p_listener.rs  share_store.rs  state.rs  uuid.rs
engine/src/sharing/lan/: direct.rs  discovery.rs  mdns.rs  mod.rs
engine/src/sharing/multiplex/: buffer.rs  mod.rs  router.rs  tunnel.rs  wire_bridge.rs  wire_frame.rs
engine/src/sharing/policy/: engine.rs  mod.rs  rewrite.rs  validate.rs
engine/src/sharing/proxy/: mod.rs  mysql.rs  postgres.rs  router.rs  tls.rs
engine/src/sharing/relay/: client.rs  mod.rs  protocol.rs  reconnect.rs
engine/src/sharing/session/: manager.rs  mod.rs  state.rs  uuid.rs
engine/src/telemetry/: logs.rs  metrics.rs  mod.rs  tracing.rs
engine/src/utils/: bennett_code.rs  crypto.rs  mod.rs  net.rs  ttl_cache.rs
engine/src/wasm/: host.rs  mod.rs  runtime.rs
relay/: .gitignore  Cargo.toml  Dockerfile  render.yaml
relay/src/: api_key_registry.rs  api_v1.rs  config.rs  health.rs  lib.rs  main.rs  metrics.rs  multiplexer.rs  rate_limit.rs  router.rs  server.rs  signaling.rs  tunnel_registry.rs  wire_frame.rs  wire_listener.rs  wire_registry.rs  wire_tls.rs
relay/src/server/: mod.rs
relay/src/sidecar/: main.rs  mod.rs
relay/src/signaling/: firebase.rs
relay/src/transport/: dtls.rs  ice.rs  mod.rs  p2p.rs  punch.rs  quic.rs  stun.rs  tcp.rs
scripts/: bennett-studio-control.sh  desktop-dev-control  engine-control  tmux-bennett-start.sh  web-dev-control
shared/: package.json  tsconfig.json
shared/sdk/typescript/: README.md  package.json  rollup.config.js  tsconfig.json
shared/types/: api.ts  database.ts  index.ts  package.json  sharing.ts  tsconfig.json
vscode-ext/: .gitignore  package.json
web/: .gitignore  deploy-app.sh  deploy-share.sh  package.json  share.html  tailwind.config.js  tsconfig.json  vercel.app.json  vercel.json  vite.config.ts  vite.share.config.ts
web-marketing/: .gitignore  deploy.sh  index.html  package.json  tailwind.config.js  vite.config.ts
web-marketing/src/: App.tsx  index.css
web-marketing/src/pages/: DownloadPage.tsx  LandingPage.tsx
web/dist-share/: share.html
web/dist-share/assets/: share-B7EDukbZ.css  share-C6opc0hJ.js  share-D72ACpZS.css  share-VrWK0mS4.js
web/src/: App.tsx  main.tsx  share-App.tsx  share-main.tsx  vite.share.config.ts
web/src/__mocks__/: sdk.ts  shared.ts
web/src/hooks/: index.ts  useDatabase.ts  useDebounce.ts  useShareSession.ts  (+3 more)
(+89 files in other folders)
