[package]
name = "bennett-cli"
version = "0.1.0"
edition = "2021"
authors = ["Bennett Studio"]
description = "Bennett Studio CLI"
license = "MIT"

[[bin]]
name = "bennett"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
