[package]
name = "bennett-engine"
version = "0.1.0"
edition = "2021"
authors = ["Bennett Studio"]
description = "Bennett Studio Control Plane"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bollard = "0.16"
futures-util = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "mysql", "sqlite", "chrono", "json", "migrate"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
