[package]
name = "bennett-engine"
version = "0.1.0"
edition = "2021"
authors = ["Bennett Studio"]
description = "Bennett Studio Control Plane"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "http2"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bollard = "0.16"
futures-util = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "mysql", "sqlite", "chrono", "json", "migrate"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# Phase 1: Share system dependencies
jsonwebtoken = { version = "9", features = ["use_pem"] }
base64 = "0.22"
rand = "0.8"
dashmap = { version = "6", features = ["serde"] }
dirs = "5.0"

# Phase 2: Connect-RPC + gRPC
prost = "0.13"
tonic = { version = "0.12", features = ["transport", "tls"] }
tonic-web = "0.12"
tonic-reflection = "0.12"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "fs"] }
bytes = "1.6"
futures = "0.3"

# Phase 4: gRPC HTTP/2 + gRPC-Web
tokio-stream = "0.1"

# Phase 5: Wire Protocol Proxy + Security
tokio-rustls = "0.26"
rustls-pemfile = "2.0"
rcgen = "0.13"
ring = "0.17"
governor = "0.6"
nonzero_ext = "0.3"

[dev-dependencies]
tokio-test = "0.4"
