[package]
name = "bennett-relay"
version = "0.1.0"
edition = "2021"
authors = ["Bennett Studio"]
description = "Bennett Studio Public Relay Server — TLS-terminating TCP proxy with pluggable transport"
license = "MIT"

[[bin]]
name = "bennett-relay"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Connection pooling
deadpool = "0.12"

# HTTP/2 + ALPN
h2 = "0.4"
http = "1.0"

# TLS with ALPN
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.0"
rcgen = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SQLite
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
dashmap = "6"
bytes = "1.6"
rand = "0.8"

# splice() for Linux zero-copy
nix = { version = "0.29", features = ["process", "zerocopy"] }

# Metrics
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# HTTP server (for P2P signaling stub)
axum = { version = "0.7", features = ["ws", "http2"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# WebSocket (P2P signaling)
tokio-tungstenite = "0.21"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
