[package]
name = "bennett-relay"
version = "0.1.0"
edition = "2021"
authors = ["Bennett Studio"]
description = "Bennett Studio Public Relay Server — TLS-terminating TCP proxy with pluggable transport"
license = "MIT"

[[bin]]
name = "bennett-relay"
path = "src/main.rs"

[[bin]]
name = "bennett-p2p-proxy"
path = "src/sidecar/main.rs"

[features]
default = ["p2p"]
p2p = ["quinn", "tokio-tungstenite"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# P2P transport dependencies
rand = "0.8"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for Firebase signaling
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# QUIC (for Phase 3)
quinn = { version = "0.11", optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# Connection pooling
deadpool = "0.12"

# HTTP/2 + ALPN
h2 = "0.4"
http = "1.0"

# TLS with ALPN
tokio-rustls = "0.26"
rustls-pemfile = "2.0"
rcgen = "0.13"

# SQLite
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
dashmap = "6"
bytes = "1.6"

# splice() for Linux zero-copy
nix = { version = "0.29", features = ["process", "zerocopy"] }

# Metrics
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# HTTP server (for P2P signaling stub)
axum = { version = "0.7", features = ["ws", "http2"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# WebSocket (P2P signaling)
tokio-tungstenite = { version = "0.21", optional = true }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
