[package]
name = "bennett-studio"
version = "0.1.0"
description = "Bennett Studio Desktop"
authors = ["Bennett Studio"]
license = "MIT"
repository = "https://github.com/msf-bennett8/bennett-studio"
edition = "2021"

[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["custom-protocol"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
